--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "node tests"
   },
   "dependencies": {
-    "@fontsource/vt323": "^4.5.6"
+    "@fontsource/vt323": "^4.5.6",
+    "prando": "^6.0.1"
   },
   "devDependencies": {
     "adm-zip": "^0.5.9",
