--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@fontsource/vt323": "^4.5.6",
-    "prando": "^6.0.1"
+    "prando": "^6.0.1",
+    "remove-files-webpack-plugin": "^1.5.0"
   },
   "devDependencies": {
     "adm-zip": "^0.5.9",
