--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "@fontsource/vt323": "^4.5.6",
-    "prando": "^6.0.1",
-    "remove-files-webpack-plugin": "^1.5.0"
+    "prando": "^6.0.1"
   },
   "devDependencies": {
     "adm-zip": "^0.5.9",
@@ -21,6 +20,7 @@
     "html-webpack-plugin": "^5.4.0",
     "license-webpack-plugin": "^4.0.2",
     "prettier": "^2.5.1",
+    "remove-files-webpack-plugin": "^1.5.0",
     "source-map-loader": "^3.0.1",
     "style-loader": "^3.3.0",
     "ts-loader": "^9.2.6",
