--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@fontsource/vt323": "^4.5.6",
-    "prando": "^6.0.1"
+    "@thi.ng/random-fxhash": "^0.2.0"
   },
   "devDependencies": {
     "adm-zip": "^0.5.9",
