--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@fontsource/vt323": "^4.5.6",
     "@thi.ng/geom-isec": "^2.1.12",
     "@thi.ng/math": "^5.3.3",
-    "@thi.ng/random-fxhash": "^0.2.0"
+    "@thi.ng/random": "^3.3.2",
+    "@thi.ng/random-fxhash": "^0.2.2"
   },
   "devDependencies": {
     "adm-zip": "^0.5.9",
