--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@fontsource/vt323": "^4.5.6",
-    "prando": "^6.0.1"
+    "@thi.ng/geom-isec": "^2.1.14",
+    "@thi.ng/math": "^5.3.3",
+    "@thi.ng/random": "^3.3.2",
+    "@thi.ng/random-fxhash": "^0.2.2"
   },
   "devDependencies": {
     "adm-zip": "^0.5.9",
