--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dirx-moving-blocks",
+  "name": "dirx-moving-blocks-mono",
   "version": "1.0.0",
-  "description": "monochromatic edition",
+  "description": "Moving Blocks Mono. Real-time deterministic webgl2 animation, fixed size, 2022.",
   "main": "index.js",
   "author": "dirx",
   "scripts": {
@@ -18,13 +18,13 @@
   },
   "devDependencies": {
     "adm-zip": "^0.5.9",
-    "copy-webpack-plugin": "^9.0.1",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.4.0",
     "html-webpack-plugin": "^5.4.0",
     "license-webpack-plugin": "^4.0.2",
     "prettier": "^2.5.1",
     "remove-files-webpack-plugin": "^1.5.0",
-    "source-map-loader": "^3.0.1",
+    "source-map-loader": "^4.0.0",
     "style-loader": "^3.3.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
