--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "dirx-iacta",
+  "name": "dirx-est",
   "version": "1.0.0",
-  "description": "Iacta. Real-time deterministic webgl2 animation, fixed size, 2022.",
-  "homepage": "https://github.com/dirx/fxhash-creations#iacta",
+  "description": "Est. Real-time deterministic webgl2 animation, fixed size, 2023.",
+  "homepage": "https://github.com/dirx/fxhash-creations#est",
   "main": "index.js",
   "author": {
     "name": "Dirk Adler",
@@ -20,15 +20,14 @@
     "@thi.ng/math": "^5.3.3",
     "@thi.ng/random": "^3.3.2",
     "@thi.ng/random-fxhash": "^0.2.2",
-    "twgl.js": "^5.0.1"
+    "dekapng": "https://github.com/jeffreypalmer/dekapng/tarball/master",
+    "twgl.js": "^5.3.0"
   },
   "devDependencies": {
     "@types/timsort": "^0.3.0",
     "adm-zip": "^0.5.9",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.4.0",
-    "graphql": "^16.6.0",
-    "graphql-request": "^5.0.0",
     "html-webpack-plugin": "^5.4.0",
     "license-webpack-plugin": "^4.0.2",
     "prettier": "^2.5.1",
@@ -38,7 +37,7 @@
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
     "webpack": "^5.59.0",
-    "webpack-cli": "^4.9.1",
+    "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.3.1"
   }
 }
